Revert "Update Dockerfile"
This reverts commit fb29f38acacfacecacc716e24a7d274db8d54b3a.

--- a/dao/Dockerfile
+++ b/dao/Dockerfile
@@ -59,6 +59,10 @@ COPY requirements.txt /tmp/
 RUN pip3 install uv
 RUN uv pip install -r /tmp/requirements.txt
 COPY run /root/dao/prog/
+
+RUN groupmod -g 1000 users \
+    && useradd -u 911 -U app \
+    && usermod -G users app
     
 EXPOSE 5000
 WORKDIR /root/dao/prog
