--- a/dao/config.yaml
+++ b/dao/config.yaml
@@ -1,5 +1,5 @@
 ---
-name: 刀 Day Ahead Optimizer
+name: 刀 Day Ahead Optimizer Test
 version: 2025.4.2
 slug: day_ahead_opt
 description: Docker used by Home Assistant Community Add-ons for day ahead optimizations
