--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,15 +17,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Publish
+      - name: Login to GHCR
+        uses: docker/login-action@v2
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+      - name: Publish to Dockerhub
         uses: home-assistant/builder@master
         with:
           args: |
             --all \
             --target dao \
-<<<<<<< Updated upstream
-            --docker-hub corneel27 \
-=======
             --docker-hub ${{ secrets.DOCKERHUB_USERNAME }} \
             --generic $GITHUB_REF_NAME
       - name: Publish to GHCR
@@ -35,7 +38,6 @@ jobs:
             --all \
             --target dao \
             --docker-hub ghcr.io/${{ secrets.DOCKERHUB_USERNAME }} \
->>>>>>> Stashed changes
             --generic $GITHUB_REF_NAME
   publish_prerelease:
     name: Publish pre-release version
